My Tran EBNF.txt
TranProgram ::= {Class | Interface}

// Class Definition

Class ::= "class" Name ["implements" Name] NEWLINE INDENT ClassBody DEDENT

ClassBody ::= {{MethodHeader StatementBlock} | {MemberDeclaration}}

MethodHeader ::= ["private"] ["shared"] Name "(" [{DeclarationStatement}] ")" [":" DeclarationStatement {DeclarationStatement}]

DeclarationStatement ::= Datatype Name {"," Name}

DataType ::= <number> | <boolean> | <string> | <character>

MemberDeclaration ::= DeclarationStatement
			["accessor"[" "]":" INDENT {Statement} DEDENT]
			["mutator"[" "]":" INDENT {Statement} DEDENT]

// what counts as a valid Name Definition

Name ::= Letter {Letter}

Letter ::= "a" | "b" | "c" | ... | "z" | "A" | "B" | "C" | ... | "Z" 

// Interface Definition

Interface ::= "interface" Name
		{MethodHeader}
	
// Statement Definition

Statement ::= IfStatement | LoopStatement | AssignmentStatement | MethodCallStatement | DeclarationStatement

StatementBlock ::= Statement | {Statement Newline}

IfStatement ::= "if" BooleanExpression StatementBlock

LoopStatement ::= "loop" BooleanExpression INDENT StatementBlock DEDENT

AssignmentStatement ::= VariableName "=" Expression

MethodCallStatement ::= MethodName "(" [Expression {"," Expression}]")"

// Expression Definition

Expression ::= BooleanExpression | NumberExpression | StringExpression

BooleanExpression ::= (VariableOrNumber NumberRelation VariableOrNumber)
			| <boolean>
			| (BooleanExpression ("&&" | "||") BooleanExpression) 
			| "!" BooleanExpression

NumberRelation ::= "==" | "!=" | "<" | "<=" | ">" | ">="

VariableOrNumber ::= Name | <number> 

NumberExpression ::= NumberExpression NumberOp NumberExpression | VariableOrNumber

NumberOp ::= "+" | "-" | "*" | "/" | "%"

StringExpression ::= VariableOrString ["+" (StringExpression | <character>)]

VariableOrString ::= Name | <string>

// Literals of each data type

<number> ::= [-] Digit {Digit} ["."Digit {Digit}]

Digit ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"

<character> ::= Letter | Digit | "," | "." | ... // All Unicode chars

<string> ::= "\""{character}"\""

<boolean> ::= "true" | "false"
